manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heath-service
  namespace: otus
spec:
  selector:
    app: go-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
