manifests/2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-app-ingress
  namespace: otus
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - backend:
              service:
                name: go-app
                port:
                  number: 8000
            pathType: Prefix
            path: /
